fixed spacing between sections

--- a/src/styles.css
+++ b/src/styles.css
@@ -329,7 +329,7 @@ input:checked + .background-slider:before {
   justify-content: center;
   padding-left: 125px;
   padding-right: 125px;
-  padding-top: 150px;
+  padding-top: 300px;
   padding-bottom: 300px;
   text-shadow: .5px .5px 2px #000000;
   animation: slide-in;
@@ -466,8 +466,8 @@ input:checked + .background-slider:before {
 .projects-section {
   min-height: 720px;
   height: 100%;
-  padding-top: 10px;
-  padding-bottom: 70px;
+  padding-top: 100px;
+  padding-bottom: 300px;
 }
 
 .projects-section h1 {
@@ -763,7 +763,7 @@ padding-right: 20px;
 padding-left: 10px;
 padding-bottom: 20px;
 border: none;
-font-size: x-large;
+font-size: 30px;
 cursor: pointer;
 background-color: var(--grey-50);
 transition: all 0.5s;
